# sprint2

./: Dockerfile  Jenkinsfile  LICENSE.txt  README.md  coverage.xml  environment.yml  pyproject.toml  pytest.ini  requirements.txt
application/: __main__.py
application/get_functions/: get_VV.py
application/helper_functions/: get_allele.py  get_requests.py  user_input.py
docs/: INSTALLATION.md  MANUAL.md
my_application/: __main__.py
my_application/get_functions/: get_VEP.py  get_VR.py  get_VV.py
my_application/helper_functions/: get_allele.py  get_hgvsg.py  get_requests.py  get_xml.py  output.py  user_input.py
tests/: function_test.py  test_app_units.py  unit_tests.py
variant_annotator/: __main__.py
variant_annotator/get_functions/: get_VEP.py  get_VR.py  get_VV.py
variant_annotator/helper_functions/: get_allele.py  get_hgvsg.py  get_requests.py  get_xml.py  output.py  user_input.py
